@@ -909,9 +909,10 @@ public class VirtualHalfEdge extends AbstractHalfEdge
 	 * @return swapped edge
 	 * @throws IllegalArgumentException if edge is on a boundary or belongs
 	 * to an outer triangle.
+	 * @see Mesh#swapEdge
 	 */
 	@Override
-	public final AbstractHalfEdge swap()
+	protected final AbstractHalfEdge swap()
 	{
 		VHswap();
 		return this;
@@ -1018,9 +1019,10 @@ public class VirtualHalfEdge extends AbstractHalfEdge
 	 *
 	 * @param n the resulting vertex
 	 * @return <code>true</code> if this edge can be contracted into the single vertex n, <code>false</code> otherwise.
+	 * @see Mesh#canCollapseEdge
 	 */
 	@Override
-	public final boolean canCollapse(AbstractVertex n)
+	protected final boolean canCollapse(AbstractVertex n)
 	{
 		// Be consistent with collapse()
 		if (hasAttributes(AbstractHalfEdge.OUTER))
@@ -1145,9 +1147,10 @@ public class VirtualHalfEdge extends AbstractHalfEdge
 	 * @throws IllegalArgumentException if edge belongs to an outer triangle,
 	 * because there would be no valid return value.  User must then run this
 	 * method against symmetric edge, this is not done automatically.
+	 * @see Mesh#collapseEdge
 	 */
 	@Override
-	public final AbstractHalfEdge collapse(AbstractMesh m, AbstractVertex n)
+	protected final AbstractHalfEdge collapse(AbstractMesh m, AbstractVertex n)
 	{
 		VHcollapse((Mesh) m, (Vertex) n);
 		return this;
@@ -1250,12 +1253,14 @@ public class VirtualHalfEdge extends AbstractHalfEdge
 	}
 	
 	/**
-	 * Split an edge.  This is the opposite of contract.
+	 * Split an edge.  This is the opposite of collapse.
 	 *
-	 * @param n the resulting vertex
+	 * @param m  mesh
+	 * @param n  the resulting vertex
+	 * @see Mesh#splitEdge
 	 */
 	@Override
-	public final AbstractHalfEdge split(AbstractMesh m, AbstractVertex n)
+	protected final AbstractHalfEdge split(AbstractMesh m, AbstractVertex n)
 	{
 		VHsplit((Mesh) m, (Vertex) n);
 		return this;
